2009-01-09  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23199

        Fix deref's of string happening on two different threads.

        No observable change in behavior, so no test.  However, there are asserts
        being added for https://bugs.webkit.org/show_bug.cgi?id=23175 which
        will detect this issue while running the normal worker tests.

        * dom/WorkerThread.cpp:
        (WebCore::WorkerThreadStartupData::create):
        (WebCore::WorkerThreadStartupData::WorkerThreadStartupData):
        (WebCore::WorkerThread::WorkerThread):
        (WebCore::WorkerThread::workerThread):
        * dom/WorkerThread.h:



Canonical link: https://commits.webkit.org/31938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39740 268f45cc-cd09-0410-ab3c-d52691b4dbfc